nástroj texy - text, úprava

--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -14,8 +14,9 @@
         <h2 class="jumbotron__title">Vývojáři pro váš projekt</h2>
         <div class="box box--lead box--mobile-only">
           <blockquote class="jumbotron__lead">
-            <p>A jsou to perfekcionisté. Požádejte je, aby vám sestrojili nějaké zařízení, a oni vám nedodají to, o co jste je požádali.
-               Vyrobí to, co jste si přáli.</p>
+            <p>A&nbsp;jsou to perfekcionisté. Požádejte je, aby vám sestrojili nějaké
+              zařízení, a oni vám nedodají to, o&nbsp;co jste je požádali. Vyrobí to, co
+              jste si&nbsp;přáli.</p>
           </blockquote>
           <a class="action-button jumbotron__cta">Jak pracujeme</a>
         </div>
@@ -33,21 +34,26 @@
       <div class="mdc-layout-grid__cell">
         <div class="box box--listen">
           <h3>Nasloucháme</h3>
-          <p>Čas věnovaný projektu  na samém začátku bereme jako investici do budoucna. Nasloucháme vašim nápadům
-            a potřebám a přemýšlíme nad  nejvhodnějším řešením, abychom projekt zvládli napoprvé dobře.</p>
+          <p>Čas věnovaný projektu na samém začátku bereme jako investici do
+            budoucna. Nasloucháme vašim nápadům a potřebám a přemýšlíme nad
+            nejvhodnějším řešením, abychom projekt zvládli napoprvé&nbsp;dobře.</p>
         </div>
       </div>
       <div class="mdc-layout-grid__cell">
         <div class="box box--develop">
           <h3>Vyvíjímě</h3>
-          <p>Pracujeme  s nejnovějšími technologiemi, abychom docílili co nejlepšího výsledku.
-            Nepotřebujeme žádné zdlouhavé zaučování a  vysvětlování. Dáme vám k ruce sehraný tým seniorních vývojářů, kteří se ihned se dají do práce.</p>
+          <p>Pracujeme s&nbsp;nejnovějšími technologiemi, abychom docílili co nejlepšího
+            výsledku. Nepotřebujeme žádné zdlouhavé zaučování a vysvětlování.
+            Dáme vám k&nbsp;ruce sehraný tým seniorních vývojářů, kteří se ihned se
+            dají do&nbsp;práce.</p>
         </div>
       </div>
       <div class="mdc-layout-grid__cell">
         <div class="box box--verify">
           <h3>Ověřujeme</h3>
-          <p>Každou myšlenku i  funkci, každý krok vývoje podrobně zkoumáme a testujeme. Soustředíme se na potřeby koncového uživatele.  Neriskujeme. Nepustíme na trh nic, za čím si nestojíme.
+          <p>Každou myšlenku i&nbsp;funkci, každý krok vývoje podrobně zkoumáme a
+            testujeme. Soustředíme se na potřeby koncového uživatele. Neriskujeme.
+            Nepustíme na trh nic, za čím si nestojíme.
           </p>
         </div>
       </div>
@@ -60,12 +66,14 @@
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>Bude vás to s námi bavit</h2>
+          <h2>Bude vás to s&nbsp;námi bavit</h2>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-          <p class="box box--mobile-only">Naše seniorita spočívá ve využití kombinací znalostí světa B2B a startupové scény a ve schopnosti aplikovat různá technologická řešení, ať už jsou stará nebo nová.
+          <p class="box box--mobile-only">Naše seniorita spočívá ve využití kombinací znalostí světa B2B a
+            startupové scény a ve schopnosti aplikovat různá technologická řešení,
+            ať už jsou stará nebo&nbsp;nová.
           </p>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
@@ -75,13 +83,16 @@
           <p class="box">Do vašeho projektu vneseme Startupovou hravost a jiný úhel pohledu.</p>
           <p class="box box--purple">Respektujeme procesy. Vaše firma, vaše pravidla.</p>
           <p class="box">Jsme otevření a féroví. Co řekneme, to platí.</p>
-          <p class="box box--purple">Neustále vzděláváme jak sebe, tak i vás a vaše děti (https://prodeti.topmonks.cz/).</p>
+          <p class="box box--purple">Neustále vzděláváme jak sebe, tak i&nbsp;vás a vaše děti (<a
+            href="https://prodeti.topmonks.cz/">https://prodeti.topmonks.cz/</a>).</p>
         </div>
         <div
           class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
           <p class="box">Provedeme vás světem IT tak, že vše pochopíte.</p>
-          <p class="box box--purple">Zbavíme vás starostí. Rizika spojená s technickým řešením umíme odhadovat a vyhnout se jim předem.</p>
-          <p class="box">Přemýšlíme v souvislostech. Zařídíme, aby dával váš produkt logický smysl koncovým uživatelům.</p>
+          <p class="box box--purple">Zbavíme vás starostí. Rizika spojená s&nbsp;technickým řešením umíme
+            odhadovat a vyhnout se jim předem.</p>
+          <p class="box">Přemýšlíme v&nbsp;souvislostech. Zařídíme, aby dával váš produkt
+            logický smysl koncovým uživatelům.</p>
         </div>
       </div>
     </div>
@@ -92,8 +103,10 @@
     <div class="mdc-layout-grid__inner">
       <div
         class="steps__step mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
-        <h3>Péče o zákazníky</h3>
-        <p>Po celou dobu spolupráce se staráme o to, abyste byli v obraze. Přidělíme vám člověka, který vám vždy vše ochotně vysvětlí, abyste společně našli nejlepší řešení.</p>
+        <h3>Péče o&nbsp;zákazníky</h3>
+        <p>Po celou dobu spolupráce se staráme o&nbsp;to, abyste byli v&nbsp;obraze.
+          Přidělíme vám člověka, který vám vždy vše ochotně vysvětlí, abyste
+          společně našli nejlepší řešení.</p>
       </div>
       <div
         class="steps__step mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
@@ -118,26 +131,15 @@
   <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Kdo s námi spolupracuje</h2>
+        <h2>Kdo s&nbsp;námi spolupracuje</h2>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-        <img src="/images/logo-clients/purposefly.png" alt="[logo] PurposeFly">
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-        <p>logo</p>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-        <p>logo</p>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-        <p>logo</p>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-        <p>logo</p>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-        <p>logo</p>
-      </div>
+      <ul class="tm-partners-list">
+        <li>{{sprite('img_logo_cs')}}</li>
+        <li>{{sprite('img_logo_erste-group')}}</li>
+        <li>{{sprite('img_logo_pricefx')}}</li>
+        <li>{{sprite('img_logo_zonky')}}</li>
+        <li>{{sprite('img_logo_adler')}}</li>
+      </ul>
     </div>
   </div>
 </section>
@@ -211,7 +213,7 @@
     <div class="mdc-layout-grid__inner">
       <div class="contact_title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Kontakt</h2>
-        <p>Máte dotaz nebo zájem o spolupráci? Ozvěte se nám.</p>
+        <p>Máte dotaz nebo zájem o&nbsp;spolupráci? Ozvěte se nám.</p>
       </div>
       <div
         class="person mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
