--- a/www.topmonks.com/src/html/contact/index.html
+++ b/www.topmonks.com/src/html/contact/index.html
@@ -44,37 +44,37 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <p><b>Office</b><br> Phone line:
             <a itemprop="telephone" href="tel:+420226257521">+420&nbsp;226&nbsp;257&nbsp;521</a><br>
-            <a itemprop="email" href="mailto:info@topmonks.com">info@topmonks.com</a></p>
+            <a itemprop="email" href="mailto:info&#64;topmonks.com">info@topmonks.com</a></p>
         </div>
 
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop" itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
-          <p><b>HR aka Happy Maker</b><br>
-            <span itemprop="name">Eliška Monsportová</span>:
+          <p><b>HR aka Happy Makers</b><br>
+            <span itemprop="name">Anička a Eliška</span>:
             <a itemprop="telephone" href="tel:+420724390424">+420&nbsp;724&nbsp;390&nbsp;424</a><br>
-            <a itemprop="email" href="mailto:eliska@topmonks.com">eliska@topmonks.com</a></p>
+            <a itemprop="email" href="mailto:happy&#64;topmonks.com">happy@​topmonks.com</a></p>
         </div>
 
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop" itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
           <p><b>Office and billing</b><br>
             <span itemprop="name">Daria Nováková</span>:
             <a itemprop="telephone" href="tel:+420774647793">+420&nbsp;774&nbsp;647&nbsp;793</a><br>
-            <a itemprop="email" href="mailto:daria.novakova@topmonks.com">daria.novakova@​topmonks.com</a>
+            <a itemprop="email" href="mailto:invoices&#64;topmonks.com">invoices@​topmonks.com</a>
           </p>
         </div>
 
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop" itemprop="employee" itemscope
              itemtype="https://schema.org/Person">
           <p><b>Sales</b><br/>
-            <span itemprop="name">Lea Petrášová</span>:
-            <a itemprop="telephone" href="tel:+420725504381">+420&nbsp;725&nbsp;504&nbsp;381</a><br/>
-            <a itemprop="email" href="mailto:lea.petrasova@topmonks.com">lea.petrasova@&#8203;topmonks.com</a></p>
+            <span itemprop="name">Kristýna a Ladislav</span>:
+            <a itemprop="telephone" href="tel:+420733713555">+420&nbsp;733&nbsp;713&nbsp;555</a><br/>
+            <a itemprop="email" href="mailto:sales&#64;topmonks.com">sales@​topmonks.com</a></p>
         </div>
 
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop" itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
-          <p><b>Software projects</b><br>
+          <p><b>Startup studio</b><br>
             <span itemprop="name">Jirka Pénzeš</span>:
             <a itemprop="telephone" href="tel:+420732364404">+420&nbsp;732&nbsp;364&nbsp;404</a><br>
-            <a itemprop="email" href="mailto:jiri.penzes@topmonks.com">jiri.penzes@​topmonks.com</a></p>
+            <a itemprop="email" href="mailto:studio&#64;topmonks.com">studio@​topmonks.com</a></p>
         </div>
       </div>
     </section>
