--- a/www.topmonks.com/src/html/contact/index.html
+++ b/www.topmonks.com/src/html/contact/index.html
@@ -47,30 +47,26 @@
             <a itemprop="email" href="mailto:info&#64;topmonks.com">info@topmonks.com</a></p>
         </div>
 
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop" itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
+        <div class="box mdc-layout-grid__cell" itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
           <p><b>HR aka Happy Makers</b><br>
-            <span itemprop="name">Anička a Eliška</span>:
+            <span itemprop="name">Anna Kovacsová</span>:
+            <a itemprop="telephone" href="tel:+420777556859">+420&nbsp;777&nbsp;556&nbsp;859</a><br>
+            <span itemprop="name">Eliška Monsportová</span>:
             <a itemprop="telephone" href="tel:+420724390424">+420&nbsp;724&nbsp;390&nbsp;424</a><br>
             <a itemprop="email" href="mailto:happy&#64;topmonks.com">happy@​topmonks.com</a></p>
         </div>
 
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop" itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
-          <p><b>Office and billing</b><br>
-            <span itemprop="name">Daria Nováková</span>:
-            <a itemprop="telephone" href="tel:+420774647793">+420&nbsp;774&nbsp;647&nbsp;793</a><br>
-            <a itemprop="email" href="mailto:invoices&#64;topmonks.com">invoices@​topmonks.com</a>
-          </p>
-        </div>
-
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop" itemprop="employee" itemscope
+        <div class="box mdc-layout-grid__cell" itemprop="employee" itemscope
              itemtype="https://schema.org/Person">
           <p><b>Sales</b><br/>
-            <span itemprop="name">Kristýna a Ladislav</span>:
+            <span itemprop="name">Kristýna Sloupová</span>:
             <a itemprop="telephone" href="tel:+420733713555">+420&nbsp;733&nbsp;713&nbsp;555</a><br/>
+            <span itemprop="name">Ladislav Gerencséry</span>:
+            <a itemprop="telephone" href="tel:+420606637915">+420&nbsp;606&nbsp;637&nbsp;915</a><br/>
             <a itemprop="email" href="mailto:sales&#64;topmonks.com">sales@​topmonks.com</a></p>
         </div>
 
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop" itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
+        <div class="box mdc-layout-grid__cell" itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
           <p><b>Startup studio</b><br>
             <span itemprop="name">Jirka Pénzeš</span>:
             <a itemprop="telephone" href="tel:+420732364404">+420&nbsp;732&nbsp;364&nbsp;404</a><br>
