--- a/www.topmonks.com/src/html/contact/index.html
+++ b/www.topmonks.com/src/html/contact/index.html
@@ -49,7 +49,7 @@
 
         <div class="box mdc-layout-grid__cell" itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
           <p><b>HR aka Happy Makers</b><br>
-            <span itemprop="name">Anna Kovacsová</span>:
+            <span itemprop="name">Anna Kovácsová</span>:
             <a itemprop="telephone" href="tel:+420777556859">+420&nbsp;777&nbsp;556&nbsp;859</a><br>
             <span itemprop="name">Eliška Monsportová</span>:
             <a itemprop="telephone" href="tel:+420724390424">+420&nbsp;724&nbsp;390&nbsp;424</a><br>
