homepage text updates

--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -29,8 +29,7 @@ TopMonks - Software development partner for your business
         <h2 class="jumbotron__title">We are developers</h2>
         <div class="box box--lead box--mobile-only">
           <blockquote class="jumbotron__lead">
-            <p>And they are perfectionists. Ask them to build you a product, and they will
-              not give you what you asked for. They will just give you what you&nbsp;want.</p>
+            <p>And they are perfectionists. Ask them to build a product, and they will not give you what you’ve asked for. They will produce what you’ve wished for.</p>
           </blockquote>
           <a class="action-button jumbotron__cta" href="#how-we-work">How we work</a>
         </div>
@@ -108,22 +107,22 @@ TopMonks - Software development partner for your business
       <div
         class="steps__step mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Customer care</h3>
-        <p>Throughout cooperation, we make sure that you have access to the project's updates and news. We will assign you a person who will always explain everything to you and find the right solution for you.</p>
+        <p>During our co-operation, we’ll keep you in the loop. We’ll assign you a person who will be always happy to explain everything, so that we could find the best solution together.</p>
       </div>
       <div
         class="steps__step mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h3>Planning and Research</h3>
-        <p>We are exploring market opportunities and verifying both, our and your ideas. The product and its development are not based on feelings but on data and experience.</p>
+        <h3>Planning and research</h3>
+        <p>We explore the market possibilities and verify our ideas and thoughts. The product and its development are not based on feelings, but data and experience.</p>
       </div>
       <div
         class="steps__step design mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Design</h3>
-        <p>Design breathes life into your product. In addition to the aesthetic function, it also ensures that the end user doesn't get lost and quickly completes the actions for which the product is intended.</p>
+        <p>Design breathes life into the product. We’ll make sure that your application is intuitive and that the end users will love it.</p>
       </div>
       <div
         class="steps__step development mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Development</h3>
-        <p>We do not start to develop thoughtlessly. We are looking for the best solutions specifically for your product. Rapid development does not necessarily mean saving time and finance. Exactly the opposite.</p>
+        <p>Rapid development doesn’t necessarily save time and money; it’s quite the other way round. We don’t start developing products without thinking; we look for the best solution.</p>
       </div>
     </div>
   </div>
