--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -149,48 +149,33 @@ TopMonks - Software development partner for your business
 
 <section class="tm-case-studies">
   <div class="mdc-layout-grid">
-    <!--<div class="mdc-layout-grid__inner tm-layout-wrapper">-->
-      <!--<div class="tm-case-studies__title mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-12">-->
-        <!--<h2>Case studies</h2>-->
-        <!--<p class="sub-text">We have learned something from every collaboration with our clients.</p>-->
-      <!--</div>-->
-      <!--<div-->
-        <!--class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-12-phone mdc-layout-grid__cell&#45;&#45;span-4-tablet mdc-layout-grid__cell&#45;&#45;span-4-desktop">-->
-        <!--<img src="/images/sporka.jpg" alt="">-->
-        <!--<h3>Česká spořitelna</h3>-->
-        <!--<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>-->
-      <!--</div>-->
-      <!--<div-->
-        <!--class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-12-phone mdc-layout-grid__cell&#45;&#45;span-4-tablet mdc-layout-grid__cell&#45;&#45;span-4-desktop">-->
-        <!--<img src="/images/pricefx.jpg" alt="">-->
-        <!--<h3>PriceFX</h3>-->
-        <!--<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>-->
-      <!--</div>-->
-      <!--<div-->
-        <!--class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-12-phone mdc-layout-grid__cell&#45;&#45;span-4-tablet mdc-layout-grid__cell&#45;&#45;span-4-desktop">-->
-        <!--<img src="/images/purposefly.jpg" alt="">-->
-        <!--<h3>PurposeFly</h3>-->
-        <!--<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>-->
-      <!--</div>-->
-      <!--<div-->
-        <!--class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-12-phone mdc-layout-grid__cell&#45;&#45;span-4-tablet mdc-layout-grid__cell&#45;&#45;span-4-desktop">-->
-        <!--<img src="/images/hearth.jpg" alt="">-->
-        <!--<h3>Hearth.net</h3>-->
-        <!--<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>-->
-      <!--</div>-->
-      <!--<div-->
-        <!--class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-12-phone mdc-layout-grid__cell&#45;&#45;span-4-tablet mdc-layout-grid__cell&#45;&#45;span-4-desktop">-->
-        <!--<img src="/images/techloop.jpg" alt="">-->
-        <!--<h3>Techloop.io</h3>-->
-        <!--<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>-->
-      <!--</div>-->
-      <!--<div-->
-        <!--class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-12-phone mdc-layout-grid__cell&#45;&#45;span-4-tablet mdc-layout-grid__cell&#45;&#45;span-4-desktop">-->
-        <!--<img src="/images/europe.jpg" alt="">-->
-        <!--<h3>GoRealEurope.com</h3>-->
-        <!--<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>-->
-      <!--</div>-->
-    <!--</div>-->
+    <div class="mdc-layout-grid__inner tm-layout-wrapper">
+      <div class="tm-case-studies__title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <h2>Case studies</h2>
+        <p class="sub-text">We have learned something from every collaboration with our clients.</p>
+      </div>
+      <div
+        class="tm-case-studies__clients  mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+        <div class="tm-case-studies__logo adler">
+          {{sprite('img_logo_adler')}}</div>
+        <h3>Adler</h3>
+        <p>Tailor-made solution to automate the process of purchasing, marketing, and sales, with the vision that the applications will be integrated into one comprehensive administration platform in the future.</p>
+      </div>
+      <div
+        class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+        <div class="tm-case-studies__logo pricefx">
+          {{sprite('img_logo_pricefx')}}</div>
+        <h3>Price f(x)</h3>
+        <p>Providing consulting professionals to support servicing a rapidly expanding portfolio of customers, and also helping to improve UX of the current website.</p>
+      </div>
+      <div
+        class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+        <div class="tm-case-studies__logo ceska-sporitelna">
+          {{sprite('img_logo_cs')}}</div>
+        <h3>Česká Spořitelna WebAPI</h3>
+        <p>Custom-made integration platform to be used internally by the bank, but also externally in the form of public API.</p>
+      </div>
+    </div>
   </div>
 </section>
 
