case studies list layout on homepage - not interactive for the moment...

--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -150,32 +150,30 @@ TopMonks - Software development partner for your business
 <section class="tm-case-studies">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
-      <div style="display: none">
       <div class="tm-case-studies__title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Case studies</h2>
         <p class="sub-text">We have learned something from every collaboration with our clients.</p>
       </div>
       <div
         class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <div class="tm-case-studies__logo tm-case-studies__logo--adler">
-          {{sprite('img_logo_adler')}}</div>
+        <div class="tm-case-studies__logo tm-case-studies__logo--adler inactive">
+          <div class="tm-bgnd-wrapper">{{sprite('img_logo_adler')}}</div></div>
         <h3>Adler</h3>
         <p>Tailor-made solution to automate the process of purchasing, marketing, and sales, with the vision that the applications will be integrated into one comprehensive administration platform in the future.</p>
       </div>
       <div
         class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <div class="tm-case-studies__logo tm-case-studies__logo--pricefx">
-          {{sprite('img_logo_pricefx')}}</div>
+        <div class="tm-case-studies__logo tm-case-studies__logo--pricefx inactive">
+          <div class="tm-bgnd-wrapper">{{sprite('img_logo_pricefx')}}</div></div>
         <h3>Price f(x)</h3>
         <p>Providing consulting professionals to support servicing a rapidly expanding portfolio of customers, and also helping to improve UX of the current website.</p>
       </div>
       <div
         class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <div class="tm-case-studies__logo tm-case-studies__logo--ceska-sporitelna">
-          {{sprite('img_logo_cs')}}</div>
+        <div class="tm-case-studies__logo tm-case-studies__logo--ceska-sporitelna inactive">
+          <div class="tm-bgnd-wrapper">{{sprite('img_logo_cs')}}</div></div>
         <h3>Česká Spořitelna WebAPI</h3>
         <p>Custom-made integration platform to be used internally by the bank, but also externally in the form of public API.</p>
-      </div>
       </div>
     </div>
   </div>
