redirect from /references to /case-studies

--- a/www.topmonks.com/src/html/case-studies/index.html
+++ b/www.topmonks.com/src/html/case-studies/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-{% set caseStudiesData = { title : 'Case Studies'} %}
+{% set caseStudiesData = { title : 'Case Studies', subTitle : 'We have learned something from every collaboration with our clients.'} %}
 
 {% include 'components/case-studies/index.html' %}
 
