--- a/www.topmonks.com/src/html/shared/footer.html
+++ b/www.topmonks.com/src/html/shared/footer.html
@@ -8,7 +8,7 @@
         <h3>About</h3>
         <p>We are your software development partners, experienced with both startup and corporate environment.</p>
         <p>If you like these ideas, come and <a href="/company-values/">join us</a>, and have your <a
-          href="/references">project delivered by us</a>.
+          href="/case-studies/">project delivered by us</a>.
           Or simply <a href="/contact/">visit us</a>. We enjoy <a href="/meet-us/">meeting interesting people</a>.
         </p>
       </div>
