updating HP quote to original inluding author

--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -29,7 +29,8 @@ TopMonks - Software development partner for your business
         <h2 class="jumbotron__title">We are developers</h2>
         <div class="box box--lead box--mobile-only">
           <blockquote class="jumbotron__lead">
-            <p>And they are perfectionists. Ask them to build a product, and they will not give you what you’ve asked for. They will produce what you’ve wished for.</p>
+            <p>And they were perfectionists. Ask them to build you a device and you wouldn’t get what you asked for. You’d get what you wanted.</p>
+             <cite>- Terry Pratchett</cite>
           </blockquote>
           <a class="action-button jumbotron__cta" href="#how-we-work">How we work</a>
         </div>
