Fixed caffe URL

--- a/www.topmonks.com/src/html/meet-us/index.html
+++ b/www.topmonks.com/src/html/meet-us/index.html
@@ -42,15 +42,15 @@
       <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-layout-wrapper">
         <div class="mdc-layout-grid__inner">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
-            <h3><a href="https://caffe.topmonks.cz">TopMonks Caffè</a></h3>
+            <h3><a href="http://caffe.topmonks.cz">TopMonks Caffè</a></h3>
             <p>Every first thursday of the month we hold regular meetup about everything we are interested in.
               Balanced mix of technical and soft themes delivered by our speakers and special guests.</p>
 
-            <div class="links"><a href="https://caffe.topmonks.cz">https://caffe.topmonks.cz</a>
+            <div class="links"><a href="http://caffe.topmonks.cz">http://caffe.topmonks.cz</a>
             </div>
           </div>
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
-            <a href="https://caffe.topmonks.cz"><img class="tm-meetup__img" alt="TopMonks Caffè logo" src="/images/community/caffe.png"></a>
+            <a href="http://caffe.topmonks.cz"><img class="tm-meetup__img" alt="TopMonks Caffè logo" src="/images/community/caffe.png"></a>
           </div>
         </div>
       </div>
