--- a/www.topmonks.cz/src/html/kde-nas-najdete/index.html
+++ b/www.topmonks.cz/src/html/kde-nas-najdete/index.html
@@ -12,24 +12,28 @@
         <div class="tm-page-header mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Komunita</h2>
           <blockquote>
-            <p>Learn or die. Teach or die. Only learning and teaching brains flourish.</p>
+            <p>Neustále vzdělávej sebe i&nbsp;ostatní. Předávání znalostí je u&nbsp;nás
+              povinnost.</p>
           </blockquote>
-          <p> We don't need you messing around from 9 to 5 in the office. We want to deliver the perfection! As our
-            team is mostly distributed, we've worked diligently to improve the ways we work together, and with
-            our clients. Don't count hours, deliver!</p>
+          <p>Našim cílem není sedět v&nbsp;kanceláři klasicky od 9&nbsp;do 5.&nbsp;Především
+            chceme zákazníkům dodávat perfektně odvedenou práci. Protože většina
+            z&nbsp;nás pracuje vzdáleně (remotně), používáme následující nástroje
+            k&nbsp;tomu, abychom měli všichni přehled o&nbsp;dění ve firmě a komunikovali mezi
+            sebou tak, jako bychom seděli u&nbsp;jednoho stolu. Přestaň počítat hodiny a
+            dělej svou práci tak, jak nejlépe dovedeš.</p>
         </div>
         <div class="box box--team mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
-          <h3>This is us</h3>
-          <p>This is us. We are a passionate team of top notch devs, designers and team leaders who always want
-            to give their best.</p>
+          <h3>To jsme my</h3>
+          <p>To jsme my. Jsme nadšený tým špičkových vývojářů, designérů a team leadrů, který ze sebe chce vždy dostat to nejlepší.</p>
         </div>
         <div class="box box--work mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
-          <h3>Our work</h3>
-          <p>Our work brings us joy and we keep on educating - ourselves and the others.</p>
+          <h3>Naše práce</h3>
+          <p>Pracujeme rádi a snažíme se neustále vzdělávat - sebe i druhé.</p>
         </div>
         <div class="box box--love mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
-          <h3>We love</h3>
-          <p>We love to share our knowledge not only among the company, but also with the world.</p>
+          <h3>Milujeme</h3>
+          <p>Milujeme sdílet naše vědomosti nejen ve firmě, ale i&nbsp;s&nbsp;celým
+            světem.</p>
         </div>
       </div>
     </div>
@@ -37,14 +41,16 @@
   <section class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>You can <b>meet us</b> here</h2>
+        <h2>Můžeš<b>nás navštívit</b> zde</h2>
       </div>
       <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-layout-wrapper">
         <div class="mdc-layout-grid__inner">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="https://caffe.topmonks.cz">TopMonks Caffè</a></h3>
-            <p>Every first thursday of the month we hold regular meetup about everything we are interested in.
-              Balanced mix of technical and soft themes delivered by our speakers and special guests.</p>
+            <p>Každý první čtvrtek v&nbsp;měsíci pořádáme pravidelná setkání pro
+              Monky i&nbsp;veřejnost. Probíráme nejrůznější témata&nbsp;&ndash; od konkrétních
+              technických řešení, přes crypto, až po ta méně technická, např. jak se
+              efektivně&nbsp;učit.</p>
 
             <div class="links"><a href="https://caffe.topmonks.cz">https://caffe.topmonks.cz</a>
             </div>
@@ -58,8 +64,8 @@
         <div class="mdc-layout-grid__inner">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="https://soundcloud.com/czpodcast-1">CZ Podcast</a></h3>
-            <p>The most popular tech-podcast in Czech republic! Duo Filemon and Dagi + interesting guest = fun
-              and knowledge guaranteed!</p>
+            <p>Nejpopulárnější tech-podcast v&nbsp;České Republice! Duo Filemon a Dagi +
+              zajímaví hosté = zábava a hodnotné informace zaručeny!</p>
 
             <div class="links"><a href="https://soundcloud.com/czpodcast-1">https://soundcloud.com/czpodcast-1</a>
             </div>
@@ -73,10 +79,9 @@
         <div class="mdc-layout-grid__inner">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="http://codingdojo.cz/">Coding Dojo</a></h3>
-            <p>Coding Dojo is a place, where you can come and train your knowledge in programming. It is organised
-              regularly in different cities. Two hours are dedicated to solving Katas or other interesting
-              issues.
-            </p>
+            <p>Coding Dojo je místo, kam za námi můžeš přijít a vzdělávat se
+              v&nbsp;programování. Pořádáme pravidelně v&nbsp;různých městech. Dvě hodiny se
+              plně věnujeme řešení Katas nebo jiným zajímavým otázkám.</p>
 
             <div class="links"><a href="http://codingdojo.cz/">http://codingdojo.cz/</a>
             </div>
@@ -90,9 +95,7 @@
         <div class="mdc-layout-grid__inner tm-layout-wrapper">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="https://coderetreat.cz/">Code Retreat CZ</a></h3>
-            <p>Code retreat is an intensive one day training focused on the basics of software development.
-              Thanks to the fact that the developers are not under pressure of results delivery CodeRetreat
-              offers the opportunity to concentrate on improving your skills.</p>
+            <p>V kurzu Code retreat se intenzivně věnujeme základům pro vývoj softwaru. Code Retreat ti dá prostor a čas se soustředit a nabít novými zkušenostmi. Code retreat is an intensive one day training focused on the basics of software development. Thanks to the fact that the developers are not under pressure of results delivery CodeRetreat offers the opportunity to concentrate on improving your skills.</p>
 
             <div class="links"><a href="https://coderetreat.cz/">https://coderetreat.cz/</a></div>
           </div>
@@ -105,9 +108,7 @@
         <div class="mdc-layout-grid__inner">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="http://www.asociaceux.cz/">Asociace UX</a></h3>
-            <p>UX Asociace mainly focuses on forming and developing local UX market with regards to the foreign
-              trends and experiences. Also it tries to rais awareness of the public about HCI, UX and offers
-              support for UX specialists, business and the academic sphere.</p>
+            <p>UX Asociace se především zaměřuje na vývoj a formování lokálního UX marketu s ohledem na zahraniční trendy a zkušenosti. Také se snaží zvýšit povědomí veřejnosti o HCI, UX a nabídnout podporu odborníkům UX, obchodu a akademické sféře.</p>
 
             <div class="links"><a href="http://www.asociaceux.cz/">http://www.asociaceux.cz/</a></div>
           </div>
@@ -120,9 +121,9 @@
         <div class="mdc-layout-grid__inner">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="https://www.meetup.com/Lambda-Meetup-Group/">Prague Lambda</a></h3>
-            <p>This meetup group was created as a group for functional programming enthusiasts, programmers
-              interested in different programming languages which support FP paradigm: Erlang, Clojure,
-              Haskell, OCaml, Scala, Lisp, etc. and different FP related topics and techniques.</p>
+            <p>Tato skupina vznikla z&nbsp;nadšených programátorů používajících
+              nejrůznější programovací jazyky s&nbsp;podporou FP paradigm: Erlang, Clojure,
+              Haskell, OCaml, Scala, Lisp,&nbsp;aj.</p>
 
             <div class="links"><a href="https://www.meetup.com/Lambda-Meetup-Group/">https://www.meetup.com/Lambda-Meetup-Group/</a></div>
           </div>
@@ -135,9 +136,10 @@
         <div class="mdc-layout-grid__inner">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="http://devminutes.cz/">DevMinutes</a></h3>
-            <p>Our colleague Jirka decided to make his very own podcast with interesting guests. Starting with
-              running, going through education system, ending with artificial intelligence - in Jirka’s
-              wide field of interests everybody can find something edifying.</p>
+            <p>Náš vážený kolega Jirka se rozhodl vytvořit svůj vlastní podcast
+              s&nbsp;mnoha zajímavými hosty. Součástí je pestrá řada témat začínaje
+              vzdělávacím systémem, konče umělou inteligenci&nbsp;&ndash; v&nbsp;Jirkově široké
+              škále zájmů si každý najde to, co ho zrovna baví a zajímá.</p>
 
             <div class="links"><a href="http://devminutes.cz/">http://devminutes.cz/</a></div>
           </div>
@@ -150,11 +152,10 @@
         <div class="mdc-layout-grid__inner">
           <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="http://www.wisephora.com/">Wisephora</a></h3>
-            <p>Wisephora focuses on supporting the discussion about future of work and connecting people and
-              organisations interested in these topics. You can be looking forward to lectures of skilled
-              managers, significant czech companies as well as various visionaries with their innovative
-              thoughts.
-            </p>
+            <p>Wisephora je skupinová diskuze o&nbsp;budoucnosti práce, propojování lidí, a
+              jak tyto otázky správně uchopit a pracovat s&nbsp;nimi. Těšit se můžete na
+              přednášky kvalifikovaných manažerů, významných českých firem
+              i&nbsp;různých vizionářů s&nbsp;jejich inovativními myšlenkami.</p>
 
             <div class="links"><a href="http://www.wisephora.com/">http://www.wisephora.com/</a></div>
           </div>
