TopMonks.cz - Kontakt překlad

--- a/www.topmonks.cz/src/html/kontakt/index.html
+++ b/www.topmonks.cz/src/html/kontakt/index.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/topmonks.html' %}
 {% set page = 'topmonks-contact' %}
-{% block title %}TopMonks Contacts{% endblock %}
+{% block title %}TopMonks Kontakt{% endblock %}
 
 {% block head %}
 <meta property="og:title" content="TopMonks Contacts">
@@ -38,11 +38,11 @@
     <section class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>Contacts</h2>
+          <h2>Kontakt</h2>
         </div>
 
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <p><b>Office</b><br> Phone line:
+          <p><b>Kancelář</b><br> Pevná linka:
             <a itemprop="telephone" href="tel:+420226257521">+420&nbsp;226&nbsp;257&nbsp;521</a><br>
             <a itemprop="email" href="mailto:info@topmonks.com">info@topmonks.com</a></p>
         </div>
@@ -82,7 +82,7 @@
     <section id="offices" class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>Offices</h2>
+          <h2>Naše kanceláře</h2>
         </div>
         <div class="box mdc-layout-grid__cell address" itemprop="subOrganization" itemscope="" itemtype="https://schema.org/Organization"
              id="prague">
@@ -94,16 +94,16 @@
                  width="100%">
           </a>
           <div class="content">
-            <h3 itemprop="name">Prague</h3>
+            <h3 itemprop="name">Praha</h3>
             <span itemprop="legalName">TopMonks s.r.o.</span>
             <div itemprop="location" itemscope itemtype="https://schema.org/Place">
               <div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
                 <span itemprop="streetAddress">Struhařovská 2931/9</span><br>
                 <span itemprop="postalCode">141 00</span>
                 <span itemprop="addressLocality">Praha 4</span><br>
-                <span itemprop="addressCountry">Czech Republic</span>
+                <span itemprop="addressCountry">Česká Republika</span>
               </div>
-              <a href="https://goo.gl/maps/SBK1BRsmgu22" class="button" data-marker="praha">show on map</a>
+              <a href="https://goo.gl/maps/SBK1BRsmgu22" class="button" data-marker="praha">ukázat na mapě</a>
               <div itemprop="geo" itemscope itemtype="https://schema.org/GeoCoordinates">
                 <meta itemprop="latitude" content="50.045386">
                 <meta itemprop="longitude" content="14.491246">
@@ -132,9 +132,9 @@
                 <span itemprop="streetAddress">Sadová 1728/17</span><br>
                 <span itemprop="postalCode">702 00</span>
                 <span itemprop="addressLocality">Ostrava</span><br>
-                <span itemprop="addressCountry">Czech Republic</span>
+                <span itemprop="addressCountry">Česká republika</span>
               </div>
-              <a href="https://goo.gl/maps/SkoWqfoKgg12" class="button" data-marker="ostrava">show on map</a>
+              <a href="https://goo.gl/maps/SkoWqfoKgg12" class="button" data-marker="ostrava">ukázat na mapě</a>
               <div itemprop="geo" itemscope itemtype="https://schema.org/GeoCoordinates">
                 <meta itemprop="latitude" content="49.8454375">
                 <meta itemprop="longitude" content="18.2892897">
@@ -161,7 +161,7 @@
                 <span itemprop="postalCode">95136</span><br>
                 <span itemprop="addressCountry">United States</span>
               </div>
-              <a href="https://goo.gl/maps/YAJRUb1rDox" class="button" data-marker="san-jose">show on map</a>
+              <a href="https://goo.gl/maps/YAJRUb1rDox" class="button" data-marker="san-jose">ukázat na mapě</a>
               <div itemprop="geo" itemscope itemtype="https://schema.org/GeoCoordinates">
                 <meta itemprop="latitude" content="37.336482">
                 <meta itemprop="longitude" content="-121.8905285">
@@ -175,10 +175,10 @@
     <section id="billing" class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>Billing information</h2>
+          <h2>Fakturační údaje</h2>
         </div>
         <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
-          <h3>Billing address</h3>
+          <h3>Fakturační adresa</h3>
           <span itemprop="legalName">TopMonks s.r.o.</span><br>
           <span itemprop="foundingLocation" itemscope="" itemtype="https://schema.org/Place">
           <span itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
@@ -192,9 +192,9 @@
           <div>Reg. No: 24847437<br> VAT ID: <span itemprop="vatID">CZ24847437</span></div>
         </div>
         <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-8-tablet">
-          <h3>Bank account</h3>
-          <div>Bank: Raiffeisen Bank</div>
-          <div>Account number: 780318/5500</div>
+          <h3>Bankovní účet</h3>
+          <div>Banka: Raiffeisen Bank</div>
+          <div>Číslo účtu: 780318/5500</div>
           <div>IBAN: CZ3655000000000000780318</div>
           <div>BIC: RZBCCZPP</div>
         </div>
